feat: 完成100%前后端集成 - 实现所有功能模块
 新增功能:
- 用户资料管理（查询和更新）
- 骑行记录服务器同步
- 完整的JWT认证系统
- CORS跨域配置

 核心改进:
- 所有功能模块连接到后端服务器
- 服务器优先+本地缓存降级策略
- 优雅的错误处理和日志记录

 文档:
- 项目需求完成度对照表
- 100%完成最终报告
- 新增功能说明
- 部署与使用说明

 完成度: 100%
- 24个文件完成前后端集成
- 17个API接口全部实现
- 5大功能模块完整实现